--- a/source/less/layout/navbar.less
+++ b/source/less/layout/navbar.less
@@ -21,6 +21,10 @@
 							> .dropdown-menu {
 								min-width: 230px;
 							}
+							
+							b.caret {
+								display: none;
+							}
 
 							&.item_active {
 								background: @main-background;
